<resources>
    <string name="app_name">My Application 2</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="kakao_app_key">559dab2dc94f604e01e5a215cfb82d5c</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="password_notsame">Password does not match</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password"><u>"forget password?"</u></string>
    <string name="interior"><u>"인테리어 업자이십니까?"</u></string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_main5">Main5Activity</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_my">My</string>
    <string name="title_activity_main6">Main6Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="request_design">인테리어 디자인 \n<font color='#0D6B72'>디자인 의뢰</font> 하러가기</string>
    <string name="request_sigong">인테리어 <font color='#0D6B72'>시공 견적</font>\n의뢰 하러가기</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main7">Main7Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="game_view_content_description">Game view</string>

</resources>
