<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/find_"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/notification_"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/my_"
        android:title="@string/title_my" />
</menu>
